--- a/packages/eslint-config-next/package.json
+++ b/packages/eslint-config-next/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-config-next",
   "version": "13.4.20-canary.4",
-  "description": "ESLint configuration used by NextJS.",
+  "description": "ESLint configuration used by Next.js.",
   "main": "index.js",
   "license": "MIT",
   "repository": {
@@ -11,13 +11,13 @@
   "homepage": "https://nextjs.org/docs/app/building-your-application/configuring/eslint#eslint-config",
   "dependencies": {
     "@next/eslint-plugin-next": "13.4.20-canary.4",
-    "@rushstack/eslint-patch": "^1.1.3",
+    "@rushstack/eslint-patch": "^1.3.3",
     "@typescript-eslint/parser": "^5.4.2 || ^6.0.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^3.5.2",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.31.7",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.5.0 || 5.0.0-canary-7118f5dd7-20230705"
   },
   "peerDependencies": {
