--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -229,6 +229,7 @@ jobs:
 
     name: stable - ${{ matrix.settings.target }} - node@16
     runs-on: ${{ matrix.settings.host }}
+    timeout-minutes: 30
     steps:
       # https://github.com/actions/virtual-environments/issues/1187
       - name: tune linux network
@@ -509,6 +510,7 @@ jobs:
       - 'linux'
       - 'x64'
       - 'metal'
+    timeout-minutes: 25
     needs: [publishRelease]
     steps:
       - uses: actions/checkout@v3
