--- a/.github/workflows/pull_request_stats.yml
+++ b/.github/workflows/pull_request_stats.yml
@@ -31,6 +31,7 @@ jobs:
   stats:
     name: PR Stats
     needs: build
+    timeout-minutes: 25
     runs-on:
       - 'self-hosted'
       - 'linux'
