--- a/.github/workflows/build_reusable.yml
+++ b/.github/workflows/build_reusable.yml
@@ -49,6 +49,10 @@ on:
         required: false
         description: 'if test trace needs uploading'
         type: string
+      rustCacheKey:
+        required: false
+        description: 'rustCacheKey to cache shared target assets'
+        type: string
 
 env:
   NAPI_CLI_VERSION: 2.14.7
@@ -113,6 +117,14 @@ jobs:
         if: ${{ inputs.skipNativeBuild != 'yes' || inputs.needsNextest == 'yes' || inputs.needsRust == 'yes' }}
 
       - run: corepack prepare --activate yarn@1.22.19 && npm i -g "turbo@${TURBO_VERSION}" "@napi-rs/cli@${NAPI_CLI_VERSION}"
+
+      - name: Cache on ${{ github.ref_name }}
+        uses: ijjk/rust-cache@turbo-cache-v1.0.7
+        if: ${{ inputs.rustCacheKey }}
+        with:
+          shared-key: ${{ inputs.rustCacheKey }}-x86_64-unknown-linux-gnu
+          save-if: ${{ github.ref_name == 'canary' }}
+          cache-provider: 'turbo'
 
       # clean up any previous artifacts to avoid hitting disk space limits
       - run: git clean -xdf && rm -rf /tmp/next-repo-*; rm -rf /tmp/next-install-* /tmp/yarn-* /tmp/ncc-cache target
