--- a/package.json
+++ b/package.json
@@ -68,7 +68,11 @@
     "@edge-runtime/jest-environment": "2.3.0",
     "@emotion/cache": "11.11.0",
     "@emotion/react": "11.11.1",
+    "@fortawesome/fontawesome-svg-core": "6.4.2",
+    "@fortawesome/free-solid-svg-icons": "6.4.2",
     "@fullhuman/postcss-purgecss": "1.3.0",
+    "@headlessui-float/react": "0.11.2",
+    "@headlessui/react": "1.7.17",
     "@mdx-js/loader": "2.2.1",
     "@mdx-js/react": "2.2.1",
     "@next/bundle-analyzer": "workspace:*",
@@ -167,6 +171,7 @@
     "lint-staged": "10.1.7",
     "lodash": "4.17.20",
     "lost": "8.3.1",
+    "lucide-react": "0.270.0",
     "minimatch": "3.0.4",
     "moment": "^2.24.0",
     "nanoid": "3.1.30",
@@ -198,6 +203,7 @@
     "react-dom-builtin": "npm:react-dom@18.3.0-canary-dd480ef92-20230822",
     "react-dom-experimental-builtin": "npm:react-dom@0.0.0-experimental-dd480ef92-20230822",
     "react-experimental-builtin": "npm:react@0.0.0-experimental-dd480ef92-20230822",
+    "react-hot-toast": "2.4.1",
     "react-server-dom-webpack": "18.3.0-canary-dd480ef92-20230822",
     "react-server-dom-webpack-experimental": "npm:react-server-dom-webpack@0.0.0-experimental-dd480ef92-20230822",
     "react-ssr-prepass": "1.0.8",
