--- a/crates/turbopack-ecmascript-runtime/js/package.json
+++ b/crates/turbopack-ecmascript-runtime/js/package.json
@@ -14,6 +14,7 @@
     "check:dev-runtime-none": "tsc -p src/dev/runtime/none"
   },
   "exports": {
+    ".": "./src/main.js",
     "./*": "./src/*.ts"
   },
   "dependencies": {
