--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -271,9 +271,10 @@ jobs:
       - name: Cache on ${{ github.ref_name }}
         uses: ijjk/rust-cache@turbo-cache-v1.0.7
         with:
-          shared-key: build-${{ matrix.settings.target }}
           save-if: 'true'
+          key: ${{ hashFiles('.cargo/config.toml') }}
           cache-provider: 'turbo'
+          shared-key: build-${{ matrix.settings.target }}
 
       # we only need custom caching for docker builds
       # as they are on an older Node.js version and have
