--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -5,9 +5,34 @@ body:
   - type: markdown
     attributes:
       value: |
-        *Note:* If you leave out sections, the issue might be moved to the ["Help" section](https://github.com/vercel/next.js/discussions/categories/help).
+        **Note:**
+        This template is to report Next.js bugs. If you need help with your project, you can:
+        - Start a discussion in the ["Help" section](https://github.com/vercel/next.js/discussions/categories/help)
+        - Ask a question on the [Next.js Discord](https://discord.com/invite/nextjs) server
+        
         [examples](https://github.com/vercel/next.js/tree/canary/examples) related issue should be reported using [this](https://github.com/vercel/next.js/issues/new?assignees=&labels=type%3A+example%2Ctemplate%3A+bug&template=2.example_bug_report.yml) issue template instead.
         Feature requests should be opened as [discussions](https://github.com/vercel/next.js/discussions/new?category=ideas). [Read more](https://github.com/vercel/next.js/blob/canary/contributing/core/adding-features.md).
+  - type: input
+    attributes:
+      label: Link to the code that reproduces this issue or a replay of the bug
+      description: |
+        A link to a public [GitHub repository](https://github.com/vercel/next.js/tree/canary/examples/reproduction-template) or a [CodeSandbox](https://codesandbox.io/p/sandbox/github/vercel/next.js/tree/canary/examples/reproduction-template) minimal reproduction. Minimal reproductions should be created from our [bug report template with `npx create-next-app -e reproduction-template`](https://github.com/vercel/next.js/tree/canary/examples/reproduction-template) and should include only changes that contribute to the issue.
+        If a minimal reproduction can't be created please share a [replay](https://www.replay.io/) of the bug which doesn't require sharing a private repo.
+        To report a Pages Router related issue, you can use these templates: [CodeSandbox](https://codesandbox.io/p/sandbox/github/vercel/next.js/tree/canary/examples/reproduction-template-pages) or [`npx create-next-app -e reproduction-template-pages`](https://github.com/vercel/next.js/tree/canary/examples/reproduction-template-pages)
+        
+        **Skipping this/providing an invalid link will result in the issue being closed**
+        
+        placeholder: Link to a public GitHub repo, CodeSandbox or Replay.io reproduction
+      placeholder: 'https://github.com/user/my-minimal-nextjs-issue-reproduction'
+    validations:
+      required: true
+  - type: textarea
+    attributes:
+      label: To Reproduce
+      description: A step-by-step description of how to reproduce the issue, based on the linked reproduction. Screenshots can be provided in the issue body below. If using code blocks, make sure that [syntax highlighting is correct](https://docs.github.com/en/get-started/writing-on-github/working-with-advanced-formatting/creating-and-highlighting-code-blocks#syntax-highlighting) and double check that the rendered preview is not broken.
+      placeholder: '1. start the application in the environment described in the previous section, 2. Click X, 3. Y will happen'
+    validations:
+      required: true
   - type: checkboxes
     attributes:
       label: Verify canary release
@@ -24,9 +49,10 @@ body:
       required: true
   - type: dropdown
     attributes:
-      label: Which area(s) of Next.js are affected? (leave empty if unsure)
+      label: Which area(s) of Next.js are affected? (Select all that apply)
       multiple: true
       options:
+        - 'Not sure'
         - 'App Router'
         - 'CLI (create-next-app)'
         - 'Data fetching (gS(S)P, getInitialProps)'
@@ -49,47 +75,30 @@ body:
         - 'SWC transpilation'
         - 'Turbopack (--turbo)'
         - 'TypeScript (plugin, built-in types)'
+    validations:
+      required: true
+  - type: dropdown
+    attributes:
+      label: Which Next.js environments are affected? (Select all that apply)
+      multiple: true
+      options:
+        - 'Not sure'
+        - 'Development (`next dev`)'
+        - 'Production (`next build && next start`)'
+        - 'Custom server/`output: "standalone"`'
+        - 'Deployed (please specify in "Additional information")'
+    validations:
+      required: true
+  - type: textarea
+    attributes:
+      label: Current vs. Expected behavior
+      description: A clear and concise description of what the bug is, and what you expected to happen.
+      placeholder: 'Following the steps from the previous section, I expected X to happen, but I observed Y instead'
+    validations:
+      required: true
   - type: input
     attributes:
-      label: Link to the code that reproduces this issue or a replay of the bug
+      label: Additional context
       description: |
-        A link to a [GitHub repository](https://github.com/vercel/next.js/tree/canary/examples/reproduction-template) or a [CodeSandbox](https://codesandbox.io/p/sandbox/github/vercel/next.js/tree/canary/examples/reproduction-template) minimal reproduction. Minimal reproductions should be created from our [bug report template with `npx create-next-app -e reproduction-template`](https://github.com/vercel/next.js/tree/canary/examples/reproduction-template) and should include only changes that contribute to the issue.
-        If a minimal reproduction can't be created please share a [replay](https://www.replay.io/) of the bug which doesn't require sharing a private repo.
-        To report a Pages Router related issue, you can use these templates: [CodeSandbox](https://codesandbox.io/p/sandbox/github/vercel/next.js/tree/canary/examples/reproduction-template-pages) or [`npx create-next-app -e reproduction-template-pages`](https://github.com/vercel/next.js/tree/canary/examples/reproduction-template-pages)
-    validations:
-      required: true
-  - type: textarea
-    attributes:
-      label: To Reproduce
-      description: Steps to reproduce the behavior, please provide a clear description of how to reproduce the issue, based on the linked minimal reproduction. Screenshots can be provided in the issue body below. If using code blocks, make sure that [syntax highlighting is correct](https://docs.github.com/en/get-started/writing-on-github/working-with-advanced-formatting/creating-and-highlighting-code-blocks#syntax-highlighting) and double check that the rendered preview is not broken.
-    validations:
-      required: true
-  - type: textarea
-    attributes:
-      label: Describe the Bug
-      description: A clear and concise description of what the bug is.
-    validations:
-      required: true
-  - type: textarea
-    attributes:
-      label: Expected Behavior
-      description: A clear and concise description of what you expected to happen.
-    validations:
-      required: true
-  - type: markdown
-    attributes:
-      value: Before posting the issue go through the steps you've written down to make sure the steps provided are detailed and clear.
-  - type: markdown
-    attributes:
-      value: Contributors should be able to follow the steps provided in order to reproduce the bug.
-  - type: markdown
-    attributes:
-      value: These steps are used to add integration tests to ensure the same issue does not happen again. Thanks in advance!
-  - type: input
-    attributes:
-      label: Which browser are you using? (if relevant)
-      description: 'Please specify the exact version. For example: Chrome 100.0.4878.0'
-  - type: input
-    attributes:
-      label: How are you deploying your application? (if relevant)
-      description: 'For example: next start, Vercel, Other platform'
+        Any extra information that might help us investigate. For example, where are you deploying your application (Vercel, Docker, other platform)? Is it only reproudcible on that platform, or locally too? Is the issue only happening in a specific browser? etc.'
+      placeholder: 'I am hosting via Docker with the recommended `output: "standalone"` option", and if I remove that option or try a different hosting option, I cannot reproduce the same issue.'
