--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -5,14 +5,13 @@ body:
   - type: markdown
     attributes:
       value: |
-        This template is to report Next.js bugs. Before opening a new issue, please do a [search](https://github.com/vercel/next.js/issues) of existing issues and :+1: upvote the existing issue instead. This will result in a quicker resolution.
+        This template is to report Next.js bugs. [Examples](https://github.com/vercel/next.js/tree/canary/examples) related issues should be reported using [this](https://github.com/vercel/next.js/issues/new?assignees=&labels=type%3A+example%2Ctemplate%3A+bug&template=2.example_bug_report.yml) issue template instead.
+        Feature requests should be opened as [discussions](https://github.com/vercel/next.js/discussions/new?category=ideas). [Read more](https://github.com/vercel/next.js/blob/canary/contributing/core/adding-features.md).
+        Before opening a new issue, please do a [search](https://github.com/vercel/next.js/issues) of existing issues and :+1: upvote the existing issue instead. This will result in a quicker resolution.
         
         If you need help with your own project, you can:
         - Start a discussion in the ["Help" section](https://github.com/vercel/next.js/discussions/categories/help)
         - Ask a question on the [Next.js Discord](https://discord.com/invite/nextjs) server
-        
-        [Examples](https://github.com/vercel/next.js/tree/canary/examples) related issues should be reported using [this](https://github.com/vercel/next.js/issues/new?assignees=&labels=type%3A+example%2Ctemplate%3A+bug&template=2.example_bug_report.yml) issue template instead.
-        Feature requests should be opened as [discussions](https://github.com/vercel/next.js/discussions/new?category=ideas). [Read more](https://github.com/vercel/next.js/blob/canary/contributing/core/adding-features.md).
   - type: input
     attributes:
       label: Link to the code that reproduces this issue or a replay of the bug
