--- a/.github/ISSUE_TEMPLATE/1.bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug_report.yml
@@ -66,6 +66,24 @@ body:
       label: Provide environment information
       description: Please run `next info` in the root directory of your project and paste the results. You might need to use `npx --no-install next info` if next is not in the current PATH.
       render: bash
+      placeholder: |
+        Operating System:
+          Platform: darwin
+          Arch: arm64
+          Version: Darwin Kernel Version 22.5.0
+        Binaries:
+          Node: 18.17.1
+          npm: 9.5.1
+          Yarn: 1.22.19
+          pnpm: N/A
+        Relevant Packages:
+          next: 13.4.20
+          eslint-config-next: 13.4.20
+          react: 18.2.0
+          react-dom: 18.2.0
+          typescript: 5.2.2
+        Next.js Config:
+          output: N/A
     validations:
       required: true
   - type: dropdown
