--- a/package.json
+++ b/package.json
@@ -247,7 +247,7 @@
   },
   "engines": {
     "node": ">=16.14.0",
-    "pnpm": "8.6.11"
+    "pnpm": ">=8.6.11"
   },
   "packageManager": "pnpm@8.6.11"
 }
