--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -124,26 +124,17 @@ jobs:
       afterBuild: turbo run rust-check
     secrets: inherit
 
-  test-experimental-turbopack-dev:
-    name: test experimental turbopack dev
-    needs: ['build-native', 'build-next']
-    uses: ./.github/workflows/build_reusable.yml
-    with:
-      skipForDocsOnly: 'yes'
-      afterBuild: RUST_BACKTRACE=0 NEXT_EXTERNAL_TESTS_FILTERS="$(pwd)/test/turbopack-tests-manifest.js" EXPERIMENTAL_TURBOPACK=1 NEXT_E2E_TEST_TIMEOUT=240000 NEXT_TEST_MODE=dev node run-tests.js --test-pattern '^(test\/development)/.*\.test\.(js|jsx|ts|tsx)$' --timings -c ${TEST_CONCURRENCY}
-    secrets: inherit
-
   test-turbopack-dev:
     name: test turbopack dev
     needs: ['build-native', 'build-next']
     uses: ./.github/workflows/build_reusable.yml
     with:
       skipForDocsOnly: 'yes'
-      afterBuild: RUST_BACKTRACE=0 NEXT_EXTERNAL_TESTS_FILTERS="$(pwd)/packages/next-swc/crates/next-dev-tests/tests-manifest.js" TURBOPACK=1 __INTERNAL_CUSTOM_TURBOPACK_BINDINGS="$(pwd)/packages/next-swc/native/next-swc.linux-x64-gnu.node" NEXT_E2E_TEST_TIMEOUT=240000 NEXT_TEST_MODE=dev node run-tests.js --test-pattern '^(test\/development)/.*\.test\.(js|jsx|ts|tsx)$' --timings -c ${TEST_CONCURRENCY}
+      afterBuild: RUST_BACKTRACE=0 NEXT_EXTERNAL_TESTS_FILTERS="$(pwd)/test/turbopack-tests-manifest.js" TURBOPACK=1 NEXT_E2E_TEST_TIMEOUT=240000 NEXT_TEST_MODE=dev node run-tests.js --test-pattern '^(test\/development)/.*\.test\.(js|jsx|ts|tsx)$' --timings -c ${TEST_CONCURRENCY}
     secrets: inherit
 
-  test-experimental-turbopack-integration:
-    name: test experimental turbopack integration
+  test-turbopack-integration:
+    name: test turbopack integration
     needs: ['build-native', 'build-next']
     strategy:
       fail-fast: false
@@ -154,23 +145,9 @@ jobs:
     with:
       nodeVersion: 16
       skipForDocsOnly: 'yes'
-      afterBuild: RUST_BACKTRACE=0 NEXT_EXTERNAL_TESTS_FILTERS="$(pwd)/test/turbopack-tests-manifest.js" EXPERIMENTAL_TURBOPACK=1 node run-tests.js --timings -g ${{ matrix.group }}/1 -c ${TEST_CONCURRENCY} --type integration
+      afterBuild: RUST_BACKTRACE=0 NEXT_EXTERNAL_TESTS_FILTERS="$(pwd)/test/turbopack-tests-manifest.js" TURBOPACK=1 node run-tests.js --timings -g ${{ matrix.group }}/1 -c ${TEST_CONCURRENCY} --type integration
     secrets: inherit
 
-  test-turbopack-integration:
-    name: test turbopack integration
-    needs: ['build-native', 'build-next']
-    strategy:
-      fail-fast: false
-      matrix:
-        group: [1, 2, 3, 4, 5]
-
-    uses: ./.github/workflows/build_reusable.yml
-    with:
-      nodeVersion: 16
-      skipForDocsOnly: 'yes'
-      afterBuild: RUST_BACKTRACE=0 NEXT_EXTERNAL_TESTS_FILTERS="$(pwd)/packages/next-swc/crates/next-dev-tests/tests-manifest.js" TURBOPACK=1 __INTERNAL_CUSTOM_TURBOPACK_BINDINGS="$(pwd)/packages/next-swc/native/next-swc.linux-x64-gnu.node" node run-tests.js --timings -g ${{ matrix.group }}/5 -c ${TEST_CONCURRENCY} --type integration
-    secrets: inherit
   test-next-swc-wasm:
     name: test next-swc wasm
     needs: ['build-native', 'build-next']
@@ -235,14 +212,7 @@ jobs:
     secrets: inherit
 
   report-test-results:
-    needs:
-      [
-        'test-dev',
-        'test-prod',
-        'test-integration',
-        'test-turbopack-dev',
-        'test-turbopack-integration',
-      ]
+    needs: ['test-dev', 'test-prod', 'test-integration']
     uses: ./.github/workflows/build_reusable.yml
     with:
       skipForDocsOnly: 'yes'
@@ -266,9 +236,7 @@ jobs:
         'rust-check',
         'test-next-swc-wasm',
         'test-turbopack-dev',
-        'test-experimental-turbopack-dev',
         'test-turbopack-integration',
-        'test-experimental-turbopack-integration',
       ]
 
     if: always()
