--- a/packages/next-swc/crates/next-core/js/tsconfig.json
+++ b/packages/next-swc/crates/next-core/js/tsconfig.json
@@ -12,42 +12,24 @@
     "checkJs": false,
     // environment
     "jsx": "react-jsx",
-    "lib": [
-      "ESNext",
-      "DOM"
-    ],
+    "lib": ["ESNext", "DOM"],
     "target": "esnext",
     // modules
     "baseUrl": ".",
     "module": "Node16",
     "moduleResolution": "node16",
     "paths": {
-      "@vercel/turbopack-next/*": [
-        "src/*"
-      ],
-      "@vercel/turbopack-next/pages/_app": [
-        "node_modules/next/app"
-      ],
-      "@vercel/turbopack-next/pages/_document": [
-        "node_modules/next/document"
-      ],
-      "@vercel/turbopack-next/pages/_error": [
-        "node_modules/next/error"
-      ],
-      "@vercel/turbopack-next/internal/_error": [
-        "node_modules/next/error"
-      ]
+      "@vercel/turbopack-next/*": ["src/*"],
+      "@vercel/turbopack-next/pages/_app": ["node_modules/next/app"],
+      "@vercel/turbopack-next/pages/_document": ["node_modules/next/document"],
+      "@vercel/turbopack-next/pages/_error": ["node_modules/next/error"],
+      "@vercel/turbopack-next/internal/_error": ["node_modules/next/error"]
     },
     "resolveJsonModule": true,
-    "types": [
-      "react/next"
-    ],
+    "types": ["react/next"],
     // emit
     "noEmit": true,
     "stripInternal": true
   },
-  "include": [
-    "src",
-    "types"
-  ]
+  "include": ["src", "types"]
 }
