--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -173,7 +173,7 @@
     "@types/fresh": "0.5.0",
     "@types/glob": "7.1.1",
     "@types/jsonwebtoken": "9.0.0",
-    "@types/lodash": "4.14.149",
+    "@types/lodash": "4.14.198",
     "@types/lodash.curry": "4.1.6",
     "@types/lru-cache": "5.1.0",
     "@types/micromatch": "4.0.2",
@@ -254,7 +254,7 @@
     "lru-cache": "5.1.1",
     "micromatch": "4.0.4",
     "mini-css-extract-plugin": "2.4.3",
-    "msw": "^1.2.2",
+    "msw": "1.3.0",
     "nanoid": "3.1.32",
     "native-url": "0.3.4",
     "neo-async": "2.6.1",
