--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,11 +46,11 @@ swc_core = { version = "=0.79.55", features = ["ecma_loader_lru", "ecma_loader_p
 testing = { version = "0.34.1" }
 
 # Turbo crates
-turbopack-binding = { git = "https://github.com/vercel/turbo.git", branch = "wbinnssmith/revert-lightning" }
+turbopack-binding = { git = "https://github.com/vercel/turbo.git", tag = "turbopack-230908.2" }
 # [TODO]: need to refactor embed_directory! macro usages, as well as resolving turbo_tasks::function, macros..
-turbo-tasks= { git = "https://github.com/vercel/turbo.git", branch = "wbinnssmith/revert-lightning" }
+turbo-tasks= { git = "https://github.com/vercel/turbo.git", tag = "turbopack-230908.2" }
 # [TODO]: need to refactor embed_directory! macro usage in next-core
-turbo-tasks-fs= { git = "https://github.com/vercel/turbo.git", branch = "wbinnssmith/revert-lightning" }
+turbo-tasks-fs= { git = "https://github.com/vercel/turbo.git", tag = "turbopack-230908.2" }
 
 # General Deps
 
